[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-fetcher"
version = "0.1.0"
description = "A robust, asynchronous API data fetcher for REST, GraphQL, and SOAP with automatic pagination and data cleaning"
readme = "README.md"
authors = [
    { name = "254co", email = "m@254carbon.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "httpx>=0.24.0",
    "xmltodict>=0.13.0",
    "tenacity>=8.0.2",
    "pydantic>=1.10.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
ray = ["ray>=2.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/api-fetcher"
Repository = "https://github.com/yourusername/api-fetcher.git"
Issues = "https://github.com/yourusername/api-fetcher/issues"

[tool.setuptools]
packages = ["api_fetcher"]